--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.1.1
 Flask_SQLAlchemy==2.5.1
+pandas==1.4.3
+psycopg2==2.9.3
+psycopg2_binary==2.9.3
 Flask_Cors==3.0.10
-requests==2.27.1
 gunicorn==20.1.0
-psycopg2
-psycopg2-binary
+
